[gd_scene load_steps=33 format=3 uid="uid://c1ny4x7ikhd2j"]

[ext_resource type="Script" path="res://src/entities/goblin/goblin.gd" id="1_i1jgx"]
[ext_resource type="Script" path="res://src/common/state_machine/state_machine.gd" id="2_icrb6"]
[ext_resource type="PackedScene" uid="uid://c8wqsow14x6ea" path="res://src/common/components/effects_applier/effects_applier_component.tscn" id="2_jj1ia"]
[ext_resource type="Texture2D" uid="uid://dyyhfhyi43oym" path="res://assets/enemies/goblin_sheet.png" id="2_s3wem"]
[ext_resource type="PackedScene" uid="uid://cnm077r8cak41" path="res://src/common/components/hurtbox/hurtbox_component.tscn" id="2_w1lkx"]
[ext_resource type="PackedScene" uid="uid://cvsgunn02v50s" path="res://src/common/components/hitbox/hitbox_component.tscn" id="3_qa6k3"]
[ext_resource type="Script" path="res://src/entities/goblin/states/move.gd" id="3_rvk6g"]
[ext_resource type="Script" path="res://src/entities/goblin/components/goblin_hitbox_component.gd" id="4_3316s"]
[ext_resource type="Script" path="res://src/entities/goblin/states/idle.gd" id="4_v4a5c"]
[ext_resource type="Script" path="res://src/entities/goblin/states/walk.gd" id="5_ty2ch"]
[ext_resource type="PackedScene" uid="uid://begdx77jtet0m" path="res://src/common/reaction_symbol/reaction_symbol.tscn" id="7_y2j53"]
[ext_resource type="Script" path="res://src/entities/goblin/states/stunned.gd" id="9_1x0gj"]
[ext_resource type="Script" path="res://src/entities/goblin/states/attack.gd" id="10_2ugi7"]
[ext_resource type="Script" path="res://src/entities/goblin/states/ready_to_attack.gd" id="11_a8cgn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atj1a"]
size = Vector2(12, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujn23"]
size = Vector2(4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl4pl"]
atlas = ExtResource("2_s3wem")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnl8x"]
atlas = ExtResource("2_s3wem")
region = Rect2(18, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pilj"]
atlas = ExtResource("2_s3wem")
region = Rect2(36, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_fovxf"]
atlas = ExtResource("2_s3wem")
region = Rect2(54, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_suugf"]
atlas = ExtResource("2_s3wem")
region = Rect2(0, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_huyxi"]
atlas = ExtResource("2_s3wem")
region = Rect2(18, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_suau5"]
atlas = ExtResource("2_s3wem")
region = Rect2(0, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_emyc5"]
atlas = ExtResource("2_s3wem")
region = Rect2(18, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcvw8"]
atlas = ExtResource("2_s3wem")
region = Rect2(36, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1xc0"]
atlas = ExtResource("2_s3wem")
region = Rect2(54, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_usdsm"]
atlas = ExtResource("2_s3wem")
region = Rect2(72, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_wls4c"]
atlas = ExtResource("2_s3wem")
region = Rect2(90, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pbgu"]
atlas = ExtResource("2_s3wem")
region = Rect2(108, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_adtfy"]
atlas = ExtResource("2_s3wem")
region = Rect2(126, 18, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_b24yo"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_rl4pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnl8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pilj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fovxf")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_suugf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huyxi")
}],
"loop": true,
"name": &"stunned",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_suau5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emyc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcvw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1xc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usdsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wls4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pbgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adtfy")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyw6e"]
size = Vector2(6, 12)

[node name="Goblin" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 21
script = ExtResource("1_i1jgx")

[node name="EffectsApplierComponent" parent="." instance=ExtResource("2_jj1ia")]

[node name="HurtboxComponent" parent="." instance=ExtResource("2_w1lkx")]
collision_layer = 4

[node name="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_atj1a")

[node name="HitboxComponent" parent="." instance=ExtResource("3_qa6k3")]
position = Vector2(7, -4)
collision_mask = 2
script = ExtResource("4_3316s")

[node name="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource("RectangleShape2D_ujn23")

[node name="PlayerDetectorRayCast" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(48, 0)
collision_mask = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_b24yo")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.489601
offset = Vector2(2, 1)

[node name="ReactionSymbol" parent="." instance=ExtResource("7_y2j53")]
position = Vector2(0, -20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_jyw6e")

[node name="ObstacleDetector" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(5, 0)
collision_mask = 5

[node name="GroundDetector" type="RayCast2D" parent="."]
position = Vector2(3, -2)
target_position = Vector2(0, 8)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "animated_sprite")]
script = ExtResource("2_icrb6")
initial_state = NodePath("Move/Idle")
animated_sprite = NodePath("../AnimatedSprite2D")

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("3_rvk6g")
character = NodePath("../..")
abstract = true

[node name="Idle" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state", "states_for_transition")]
script = ExtResource("4_v4a5c")
move_state = NodePath("..")
states_for_transition = [NodePath("../Walk"), NodePath("../Stunned"), NodePath("../../ReadyToAttack")]

[node name="IdleTimer" type="Timer" parent="StateMachine/Move/Idle"]
editor_description = "Time to go from Idle to Walk again."
wait_time = 2.0
one_shot = true

[node name="Walk" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state", "states_for_transition")]
script = ExtResource("5_ty2ch")
move_state = NodePath("..")
states_for_transition = [NodePath("../Idle"), NodePath("../Stunned"), NodePath("../../ReadyToAttack")]

[node name="WalkTimer" type="Timer" parent="StateMachine/Move/Walk"]
wait_time = 5.0
one_shot = true

[node name="Stunned" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state", "states_for_transition")]
script = ExtResource("9_1x0gj")
move_state = NodePath("..")
states_for_transition = [NodePath("../Idle")]

[node name="StunTimer" type="Timer" parent="StateMachine/Move/Stunned"]
wait_time = 3.0
one_shot = true

[node name="Attack" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state", "states_for_transition")]
script = ExtResource("10_2ugi7")
move_state = NodePath("..")
states_for_transition = [NodePath("../Idle"), NodePath("../Stunned")]

[node name="AttackTimer" type="Timer" parent="StateMachine/Move/Attack"]
wait_time = 2.0
one_shot = true

[node name="CanAttackTimer" type="Timer" parent="StateMachine/Move"]
wait_time = 3.0
one_shot = true

[node name="ReadyToAttack" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "states_for_transition")]
script = ExtResource("11_a8cgn")
character = NodePath("../..")
states_for_transition = [NodePath("../Move/Stunned"), NodePath("../Move/Attack")]

[node name="ReadyToAttackTimer" type="Timer" parent="StateMachine/ReadyToAttack"]
one_shot = true

[connection signal="timeout" from="StateMachine/Move/Stunned/StunTimer" to="StateMachine/Move/Stunned" method="_on_stun_timer_timeout"]
[connection signal="timeout" from="StateMachine/Move/Attack/AttackTimer" to="StateMachine/Move/Attack" method="on_attack_timer_timeout"]
[connection signal="timeout" from="StateMachine/Move/CanAttackTimer" to="StateMachine/Move" method="_on_can_attack_timer_timeout"]
[connection signal="timeout" from="StateMachine/ReadyToAttack/ReadyToAttackTimer" to="StateMachine/ReadyToAttack" method="_on_ready_to_attack_timer_timeout"]

[editable path="HurtboxComponent"]
[editable path="HitboxComponent"]
